--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<!-- app-component (root) template -->
 <h1>
   {{title}}
 </h1>
+
+<!-- Load the click-me component -->
+<h3>Exammple 1: handle click event</h3>
+<app-click-me></app-click-me>
