--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,15 @@
 </h1>
 
 <!-- Load the click-me component -->
-<h3>Exammple 1: handle click event</h3>
+<h3>Example 1: handle click event</h3>
 <app-click-me></app-click-me>
+  <!-- app-component (root) template -->
+  
+  <!-- Load the show-message component -->
+  <h3>Example 2: Show message from input</h3>
+<app-show-message></app-show-message>
+
+<!-- Load the loop-back component -->
+<h3>Example 3: Show message from input without click<h3>
+<app-loop-back></app-loop-back>
+
