--- a/src/app/mile-kilo/mile-kilo.component.html
+++ b/src/app/mile-kilo/mile-kilo.component.html
@@ -1,3 +1,21 @@
 <p>
-  mile-kilo works!
+  <!-- Input is bound to myMessage property -->
+  <!-- the default value is set = ''-->
+  <!-- the # syntax indicates a template reference vairable-->
+  <!-- which can be access directly-->
+  <input #myMessage myMessage.value='' />
+
+  <!-- myMessage.value is passed as a parameter to the onClickMe method -->
+  <button (click)="onClickMe(myMessage.value)">Enter Miles</button>
 </p>
+<p>
+   <input #myMessage2 myMessage2.value='' />
+    <button (click)="onClickMe2(myMessage2.value)">Enter Kilometers</button>
+
+  </p>
+
+  <!-- Display teh value by binding to an h3 element -->
+  <!-- css class for styling -->
+  <h3 class="message">{{clickMessage}}<h3>
+  Your Conversion
+
