--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,3 +16,6 @@
 <h3>Example 3: Show message from input without click<h3>
 <app-loop-back></app-loop-back>
 
+<!-- Load the mile-kilo component -->
+<h3>Example 4: Shows input convert miles to kilometers</h3>
+<app-mile-kilo></app-mile-kilo>
